# rdfvr

./: README.md  pyproject.toml  rdfvr.py
